# Generated by Django 5.1.1 on 2024-09-17 10:23

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='Vaccine',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=32, verbose_name='Vaccine Name')),
                ('description', models.TextField(max_length=1024)),
                ('number_of_doses', models.IntegerField(default=1)),
                ('interval', models.IntegerField(default=0, help_text='Please provide interval in days')),
                ('storage_temperature', models.IntegerField(blank=True, help_text='Provide the temperature in Celcius', null=True)),
                ('minimum_age', models.IntegerField(default=0)),
            ],
        ),
    ]
